Db configuration + files created

--- a/public/views/login.pug
+++ b/public/views/login.pug
@@ -1,8 +1,7 @@
 html
   head
-    title Home
+    title Login
     link(rel="stylesheet", href="/css/home.css")
 
   body
     main
-      div Bonjour les rattrapages 
