--- a/public/views/login.pug
+++ b/public/views/login.pug
@@ -1,7 +1,13 @@
 html
   head
     title Login
-    link(rel="stylesheet", href="/css/home.css")
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous")
 
   body
     main
+      form(action='/login' method="post")
+            label(for="email") Login with your e-mail address
+            input(type="email" name="mail" placeholder="Ex : exemple@exemple.com")
+            label(for="password") Password
+            input(type="password" name="password" placeholder="Ex : password")
+            input(class="btn btn-primary" type="submit" value="Login")
