--- a/public/views/register.pug
+++ b/public/views/register.pug
@@ -1,7 +1,15 @@
 html
   head
     title Register
-    link(rel="stylesheet", href="/css/home.css")
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous")
 
   body
     main
+      form(action='/register' method="post")
+            label(for="email") Register with your e-mail address
+            input(type="email" name="email" placeholder="Ex : exemple@exemple.com")
+            label(for="username") Username
+            input(type="text" name="username" placeholder="Ex : Username")
+            label(for="password") Password
+            input(type="password" name="password" placeholder="Ex : password")
+            input(class="btn btn-primary" type="submit" value="Register")
