--- a/public/views/login.pug
+++ b/public/views/login.pug
@@ -5,9 +5,15 @@ html
 
   body
     main
-      form(action='/login' method="post")
-            label(for="email") Login with your e-mail address
-            input(type="email" name="mail" placeholder="Ex : exemple@exemple.com")
-            label(for="password") Password
-            input(type="password" name="password" placeholder="Ex : password")
-            input(class="btn btn-primary" type="submit" value="Login")
+      div(class="container")
+        h1 Login
+      div(class="container")
+          form(action='/login' method="post")
+            div(class="form-group")
+              label(for="email") Login with your e-mail address
+              input(type="email" name="mail" placeholder="Ex : exemple@exemple.com")
+            div(class="form-group")
+              label(for="password") Password
+              input(type="password" name="password" placeholder="Ex : password")
+            div(class="form-check")
+              input(class="btn btn-primary" type="submit" value="Login")
