--- a/public/views/create.pug
+++ b/public/views/create.pug
@@ -6,7 +6,7 @@ html
   body
     main
       div(class="container")
-        h1 Add Article
+        h1 Create Article
       div(class="container")
         form(action="create" method="post")
           div(class="form-group")
