--- a/public/views/detail.pug
+++ b/public/views/detail.pug
@@ -1,7 +1,13 @@
 html
   head
     title Detail article
-    link(rel="stylesheet", href="/css/home.css")
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous")
 
   body
     main
+      div(class="container")
+        h1 #{article.name}
+        h2 #{article.price}
+        span #{article.stock}
+        p #{question.description}
+        button(class="btn btn-primary")
